Fix z-index issue

--- a/app/src/userpages/components/KeyField/keyField.pcss
+++ b/app/src/userpages/components/KeyField/keyField.pcss
@@ -10,3 +10,7 @@
   transform: translate(0, -50%);
   z-index: 1;
 }
+
+.withMenu {
+  z-index: 2;
+}
